--- a/404.md
+++ b/404.md
@@ -4,6 +4,8 @@ title: 404 - Page not found
 permalink: /404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+Sorry, we can't find that page that you're looking for.
+
+---- 
 
 Howdy!  I re-did this site in April 2022 in a way that blew up all the former (Wordpress) links to existing content.  That's all been migrated - head [back to the homepage]({{ site.baseurl }}/) or select one of the section links above (there wasn't _that_ much content on here to begin with) and you should find what you were originally looking for.
