--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -5,7 +5,7 @@ title: "We’ve Got Cookie Sign: Munchie (S13E4)"
 
 Folks?  I think this one did psychic damage.  I am apparently cursed (or possibly blessed) to be experiencing the _Munchies_ family of Quality Film Products in reverse order, having watched 1994's _Munchie Strikes Back_ at my local bad movie night, Trash Night, in early 2019.  At this rate, I'm scheduled to watch _Munchies_ in 3 years.  I typically do a re-watch of the episode a few days after the premiere for recipe purposes, but didn't immediately jump back into watching _Munchie_, largely because it felt like I was _still watching Munchie the first time around._  This one hit _hard_.
 
-<p align="center"><img src="/assets/images/gotta_be_munchies/header.png" width="800"></p>
+<p align="center"><img src="/assets/images/gotta_be_munchies/header.jpg" width="800"></p>
 
 This is the rare episode that I had an if-all-else-fails idea for before watching things.  _Munchie_ felt like it would lend itself well to a sort of kitchen-sink 420-esque all-of-the-junk-foods-at-once kind of snacky thing, and it also felt like a nice time to trot out a bar, as I'm Midwestern (Minnesotan, even) and we have a big Bar Culture for things like this, don't-cha-know.  So I wanted to do a blondie with a bunch of munchies mixed in, with some beer just for kicks.
 
