--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -13,4 +13,32 @@ And then it hit me, mid-movie, the first time through:
 
 <p align="center"><img src="/assets/images/gotta_be_munchies/gotta_be_munchies1.jpeg" width="640"></p>
 
-These are the same color as ᴹᵘⁿᶜʰᶦᵉ'ˢ ᵗᵉʳʳᶦᵇˡᵉ ᶠˡᵉˢʰ.  His ₕᵢdₑₒᵤₛ ₜaᵤₚₑ ₑₓₜₑᵣᵢₒᵣ.  So for that, I'm sorry.  I tried to make something nice, but apparently this movie's really sunken in deep.  Let's talk about how to make these delicious bars ~~ᵗʰᵉ ᵉˣᵃᶜᵗ ˢʰᵃᵈᵉ ᵒᶠ ᵗʰᶦˢ ᶜᵘʳˢᵉ́ᵈ ʳᵒᶜᵏᵃᶠᶦʳᵉ ᵉˣᵖˡᵒˢᶦᵒⁿ ʳᵉʲᵉᶜᵗ~~!
+These are the same color as ᴹᵘⁿᶜʰᶦᵉ'ˢ ᵗᵉʳʳᶦᵇˡᵉ ᶠˡᵉˢʰ.
+His ₕᵢdₑₒᵤₛ ₜaᵤₚₑ ₑₓₜₑᵣᵢₒᵣ.
+So for that, I'm sorry. I tried to make something nice, but apparently this movie's really sunken in deep.  Let's talk about how to make these delicious bars ᵗʰᵉ ᵉˣᵃᶜᵗ ˢʰᵃᵈᵉ ᵒᶠ ᵗʰᶦˢ ᶜᵘʳˢᵉ́ᵈ ʳᵒᶜᵏᵃᶠᶦʳᵉ ᵉˣᵖˡᵒˢᶦᵒⁿ ʳᵉʲᵉᶜᵗ!
+
+----
+
+## Gotta Be Munchies
+_adapted from the Pretzels & Stout Cookie Bars from Jesse Szewczyk's [Cookies: The New Classics](https://bookshop.org/books/cookies-the-new-classics-a-baking-book/9780593235669)_
+
+### Ingredients
+
+- 2 sticks (16 tablespoons/226 grams) unsalted butter
+- 2 cups (400 grams) packed light brown sugar
+- 1/4 cup (50 grams) granulated sugar
+- 2 large eggs, room temperature
+- 1 tsp vanilla extract
+- 1/2 cup (118 ml) dry stout beer, such as Guinness, or another dark, not-too-hoppy beer
+- 3 cups spooned and leveled all-purpose flour (384 grams)
+- 3/4 tsp baking soda
+- 1 tsp kosher salt
+- 8 oz. (227 grams) semisweet or bittersweet (or dark) chocolate, roughly chopped (about 1 1/2 cups)
+- 3/4 cup salted mini pretzels, crushed into small, irregular pieces (plus an extra handful for the top)
+- 3/4 cup kettle-style potato chips, crushed into irregular pieces (plus an extra handful for the top)
+
+### Instructions
+
+1.
+2.
+3.
