--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -3,7 +3,9 @@ layout: post
 title: "We’ve Got Cookie Sign: Munchie (S13E4)"
 ---
 
-Folks?  I think this one did psychic damage.  I am apparently cursed (or possibly blessed) to be experiencing the _Munchies_ family of Quality Film Products in reverse order, having watched 1994's _Munchie Strikes Back_ at my local bad movie night, Trash Night, in early 2019.  At this rate, I'm scheduled to watch _Munchies_ in 3 years.  I typically do a re-watch of the episode a few days after the premiere for recipe purposes, but didn't immediately jump back into watching _Munchie_, largely because it felt like I was _still watching Munchie the first time around._  This one hit _hard_.
+Folks?  I think this one did psychic damage.  
+
+I am apparently cursed (or possibly blessed?) to be experiencing the _Munchies_ family of Quality Film Products in reverse order, having watched 1994's _Munchie Strikes Back_ at my local bad movie night, Trash Night, in early 2019.  At this rate, I'm scheduled to watch _Munchies_ in 3 years.  I typically do a re-watch of the episode a few days after the premiere for recipe purposes, but didn't immediately jump back into watching _Munchie_, largely because it felt like I was _still watching Munchie the first time around._  This one hit _hard_.
 
 <p align="center"><img src="/assets/images/gotta_be_munchies/header.jpg" width="800"></p>
 
@@ -11,11 +13,30 @@ This is the rare episode that I had an if-all-else-fails idea for before watchin
 
 And then it hit me, mid-movie, the first time through:
 
-<p align="center"><img src="/assets/images/gotta_be_munchies/gotta_be_munchies1.jpeg" width="640"></p>
+<p align="center"><img src="/assets/images/gotta_be_munchies/gotta_be_munchies1.jpeg" width="500"></p>
+
+<p align="center"><img src="/assets/images/gotta_be_munchies/munchie.gif" width="400"></p>
 
 These are the same color as ᴹᵘⁿᶜʰᶦᵉ'ˢ ᵗᵉʳʳᶦᵇˡᵉ ᶠˡᵉˢʰ.
+
 His ₕᵢdₑₒᵤₛ ₜaᵤₚₑ ₑₓₜₑᵣᵢₒᵣ.
+
 So for that, I'm sorry. I tried to make something nice, but apparently this movie's really sunken in deep.  Let's talk about how to make these delicious bars ᵗʰᵉ ᵉˣᵃᶜᵗ ˢʰᵃᵈᵉ ᵒᶠ ᵗʰᶦˢ ᶜᵘʳˢᵉ́ᵈ ʳᵒᶜᵏᵃᶠᶦʳᵉ ᵉˣᵖˡᵒˢᶦᵒⁿ ʳᵉʲᵉᶜᵗ!
+
+[browning butter montage]
+We're going to start by making two sticks worth of browned butter.  In a saucepan over medium heat, melt two sticks of butter and keep them over the heat, swirling occasionally.  Your butter's going to get _super_ foamy, then that foam will turn to larger bubbles, then dissipate as the water evaporates from the butter and starts to become brown, about 4ish minutes.  
+
+When it smells nutty and you're seeing a consistent light brown color, take the pan off the heat and pour the butter into a large mixing bowl, using a spatula to get all that golden-brown goodness.  Set that aside for 20 minutes to cool off.
+
+[mix-ins]
+
+While that's cooling, it's a perfect time to get your baking pan prepped and get all of our mix-ins in order.  Spray a 9x13 pan with cooking spray, then add some parchment paper with an overhang for easy removal after baking.  Add a spritz more of cooking spray to the parchment and set that aside.
+
+For our mix-ins on these blondies, we're going to take \~3/4 cup of crushed mini pretzels, the same amount of lightly crushed kettle chips, and 8 oz. of semi-sweet (or bittersweet or, in my case, 78% dark) chocolate that's been broken up or chopped up.  My secret for baking chocolate is to check your local CVS for when they have the Lindt bars (or, even better, Tony's Chocolonely bars) on 2-for-1 special and stock up.
+
+[beer, glorious beer]
+
+The base note complimenting all of this is some dark beer, which adds a nice malt-y flavor at the base of everything else.  I'm getting fancy here and using a really nice imperial stout from Mikkeller with chocolate and coffee flavors in the mix (just to really push these bars over the top), but any kind of dark, dry stout (or other dark beer variety) will play nice here.  The main thing you _don't_ want here is something too hoppy - that's going to add a bitter note that won't play as well with everything else going on.
 
 ----
 
