--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -23,18 +23,19 @@ His ₕᵢdₑₒᵤₛ ₜaᵤₚₑ ₑₓₜₑᵣᵢₒᵣ.
 
 So for that, I'm sorry. I tried to make something nice, but apparently this movie's really sunken in deep.  Let's talk about how to make these delicious bars ᵗʰᵉ ᵉˣᵃᶜᵗ ˢʰᵃᵈᵉ ᵒᶠ ᵗʰᶦˢ ᶜᵘʳˢᵉ́ᵈ ʳᵒᶜᵏᵃᶠᶦʳᵉ ᵉˣᵖˡᵒˢᶦᵒⁿ ʳᵉʲᵉᶜᵗ!
 
-[browning butter montage]
+<p align="center"><img src="/assets/images/gotta_be_munchies/1.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/2.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/3.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/4.jpeg" width="400"></p>
+
 We're going to start by making two sticks worth of browned butter.  In a saucepan over medium heat, melt two sticks of butter and keep them over the heat, swirling occasionally.  Your butter's going to get _super_ foamy, then that foam will turn to larger bubbles, then dissipate as the water evaporates from the butter and starts to become brown, about 4ish minutes.  
 
 When it smells nutty and you're seeing a consistent light brown color, take the pan off the heat and pour the butter into a large mixing bowl, using a spatula to get all that golden-brown goodness.  Set that aside for 20 minutes to cool off.
 
-[mix-ins]
+<p align="center"><img src="/assets/images/gotta_be_munchies/5.jpeg" width="450"><img src="/assets/images/gotta_be_munchies/6.jpeg" width="450"></p>
 
 While that's cooling, it's a perfect time to get your baking pan prepped and get all of our mix-ins in order.  Spray a 9x13 pan with cooking spray, then add some parchment paper with an overhang for easy removal after baking.  Add a spritz more of cooking spray to the parchment and set that aside.
 
 For our mix-ins on these blondies, we're going to take \~3/4 cup of crushed mini pretzels, the same amount of lightly crushed kettle chips, and 8 oz. of semi-sweet (or bittersweet or, in my case, 78% dark) chocolate that's been broken up or chopped up.  My secret for baking chocolate is to check your local CVS for when they have the Lindt bars (or, even better, Tony's Chocolonely bars) on 2-for-1 special and stock up.
 
-[beer, glorious beer]
+<p align="center"><img src="/assets/images/gotta_be_munchies/7.jpeg" width="450"></p>
 
 The base note complimenting all of this is some dark beer, which adds a nice malt-y flavor at the base of everything else.  I'm getting fancy here and using a really nice imperial stout from Mikkeller with chocolate and coffee flavors in the mix (just to really push these bars over the top), but any kind of dark, dry stout (or other dark beer variety) will play nice here.  The main thing you _don't_ want here is something too hoppy - that's going to add a bitter note that won't play as well with everything else going on.
 
