--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -23,9 +23,11 @@ His ₕᵢdₑₒᵤₛ ₜaᵤₚₑ ₑₓₜₑᵣᵢₒᵣ.
 
 So for that, I'm sorry. I tried to make something nice, but apparently this movie's really sunken in deep.  Let's talk about how to make these delicious bars ᵗʰᵉ ᵉˣᵃᶜᵗ ˢʰᵃᵈᵉ ᵒᶠ ᵗʰᶦˢ ᶜᵘʳˢᵉ́ᵈ ʳᵒᶜᵏᵃᶠᶦʳᵉ ᵉˣᵖˡᵒˢᶦᵒⁿ ʳᵉʲᵉᶜᵗ!
 
-<p align="center"><img src="/assets/images/gotta_be_munchies/1.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/2.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/3.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/4.jpeg" width="400"></p>
+<p align="center"><img src="/assets/images/gotta_be_munchies/1.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/2.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/3.jpeg" width="400"></p>
 
-We're going to start by making two sticks worth of browned butter.  In a saucepan over medium heat, melt two sticks of butter and keep them over the heat, swirling occasionally.  Your butter's going to get _super_ foamy, then that foam will turn to larger bubbles, then dissipate as the water evaporates from the butter and starts to become brown, about 4ish minutes.  
+We're going to start by making two sticks worth of browned butter.  In a saucepan over medium heat, melt two sticks of butter and keep them over the heat, swirling occasionally.  Your butter's going to get _super_ foamy, then that foam will turn to larger bubbles, then dissipate as the water evaporates from the butter and starts to become brown, about 4ish minutes. 
+
+<p><img src="/assets/images/gotta_be_munchies/4.jpeg" width="400"></p> 
 
 When it smells nutty and you're seeing a consistent light brown color, take the pan off the heat and pour the butter into a large mixing bowl, using a spatula to get all that golden-brown goodness.  Set that aside for 20 minutes to cool off.
 
@@ -37,7 +39,27 @@ For our mix-ins on these blondies, we're going to take \~3/4 cup of crushed mini
 
 <p align="center"><img src="/assets/images/gotta_be_munchies/7.jpeg" width="450"></p>
 
-The base note complimenting all of this is some dark beer, which adds a nice malt-y flavor at the base of everything else.  I'm getting fancy here and using a really nice imperial stout from Mikkeller with chocolate and coffee flavors in the mix (just to really push these bars over the top), but any kind of dark, dry stout (or other dark beer variety) will play nice here.  The main thing you _don't_ want here is something too hoppy - that's going to add a bitter note that won't play as well with everything else going on.
+The base note complimenting all of this is some dark beer, which adds a nice malt-y flavor at the base of everything else.  I'm getting fancy here and using a really nice imperial stout from Mikkeller with chocolate and coffee flavors in the mix (just to really push these bars over the top), but any kind of dark, dry stout (or other dark beer variety) will play nice here.  
+
+The main thing you _don't_ want here is something too hoppy - that's going to add a bitter note that won't play as well with everything else going on.  You're only going to need half a cup on the beer, so there's plenty left over ~~to drink to forget the terrible spectre you just watched for 80 minutes of fAmIlY eNtErTaInMeNt~~
+
+<p align="center"><img src="/assets/images/gotta_be_munchies/8.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/9.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/10.jpeg" width="400"></p>
+
+To the cooled browned butter, add brown sugar, granulated sugar, two eggs, vanilla, and the beer.  Whisk this for a few minutes until fully combined, then add three cups of flour, baking soda, and salt, mixing with a spatula until everything comes together.  Once that's looking nice and smooth, mix in the chocolate, chips, and pretzels, saving a handful of each aside for adding along the top.
+
+<p align="center"><img src="/assets/images/gotta_be_munchies/11.jpeg" width="400"></p>
+
+Everything gets added to the prepared pan and smoothed out with an offset spatual.  Place those last handfuls of chips/pretzels on top, lightly press them into the dough, and bake for 42-48 minutes at 325 F.
+
+<p align="center"><img src="/assets/images/gotta_be_munchies/12.jpeg" width="400"></p>
+
+When these come out of the oven, it's important to bang the pan against your counter a few times to deflate what's going on on top.  Leave in the pan to cool for at least 2 hours (the base is _just_ set,and you want the bars to finish their out-of-oven baking and get a little more set in the middle), then cut into 24 squares.
+
+<p align="center"><img src="/assets/images/gotta_be_munchies/gotta_be_munchies2.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/closeup.jpeg" width="400"></p>
+
+And there you go!  We've transformed a traumatizing film experience into a tasty treat ᵗʰᵃᵗ'ˢ ᵗʰᵉ ˢᵃᵐᵉ ᶜᵒˡᵒʳ ᵃˢ ᵗʰᵉ ᵗᵉʳʳᶦᵇˡᵉ ᶠᵒᵃᵐ ʳᵘᵇᵇᵉʳ ᵇᵃʳᵉˡʸ ʳᵉᵐᵃᶦⁿᶦⁿᵍ ʷʳᵃᵖᵖᵉᵈ ᵃʳᵒᵘⁿᵈ ᶦᵗˢ ᵃⁿᶦᵐᵃᵗʳᵒⁿᶦᶜ ˢᵏᵉˡᵉᵗᵒⁿ.  Much like Dom DeLuise's character in this movie, these are over the top, a little salty, and a concerning shade of ecru.  You're welcome?
+
+Next Time: _Doctor Mordrid_.
 
 ----
 
