--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -83,6 +83,9 @@ _adapted from the Pretzels & Stout Cookie Bars from Jesse Szewczyk's [Cookies: T
 
 ### Instructions
 
-1.
-2.
-3.
+1.In a saucepan over medium heat, melt the butter.  Continue cooking, stirring and swirling the pan to prevent the milk solids from burning, until the butter foams and then darkens in color slightly and is very fragrant, 3-4 minutes.  Immediately transfer the butter to a large heatproof bowl and let cool for 20 minutes, until warm but no longer hot.
+2.Arrange a rack in the middle of the oven and preheat to 325 F.  Grease a 9x13-inch baking pan (ideally metal, since you're going to be banging this on the counter after baking) with cooking spray.  Line with parchment paper, leaving an overhang so it's easy to remove the bars from the pan.  Lightly coat the parchment with some cooking spray.
+3. Add the brown sugar, granulated sugar, eggs, vanilla, and beer to the bowl of melted butter. Whisk until smooth, 1-2 minutes.  Add the flour, baking soda, and kosher salt, stirring with a rubber spatula until a smooth batter forms.  Stir in the chocolate, pretzels, and potato chips.
+4. Transfer to the prepared pan and spread into an even layer using an offset spatula. Add a final handful of crushed pretzels and chips to the top, pressing in lightly.  Bake for 42 to 48 minutes, until the top is lightly browned, the edges are set, and a toothpick inserted into the center comes out with only a few moist crumbs. (Avoid inserting into a pocket of melted chocolate)
+5. Remove the pan from the oven and immediately bang it on the counter to deflate the cookie base slightly.
+6. The cookie base will be very gooey when it comes out of the oven, but will firm up once cooled, so set aside for at least 2 hours before slicing the base into a 6x4 grid to make 24 bars.
