--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -57,7 +57,9 @@ When these come out of the oven, it's important to bang the pan against your cou
 
 <p align="center"><img src="/assets/images/gotta_be_munchies/gotta_be_munchies2.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/closeup.jpeg" width="400"></p>
 
-And there you go!  We've transformed a traumatizing film experience into a tasty treat ᵗʰᵃᵗ'ˢ ᵗʰᵉ ˢᵃᵐᵉ ᶜᵒˡᵒʳ ᵃˢ ᵗʰᵉ ᵗᵉʳʳᶦᵇˡᵉ ᶠᵒᵃᵐ ʳᵘᵇᵇᵉʳ ᵇᵃʳᵉˡʸ ʳᵉᵐᵃᶦⁿᶦⁿᵍ ʷʳᵃᵖᵖᵉᵈ ᵃʳᵒᵘⁿᵈ ᶦᵗˢ ᵃⁿᶦᵐᵃᵗʳᵒⁿᶦᶜ ˢᵏᵉˡᵉᵗᵒⁿ.  Much like Dom DeLuise's character in this movie, these are over the top, a little salty, and a concerning shade of ecru.  You're welcome?
+And there you go!  We've transformed a traumatizing film experience into a tasty treat ᵗʰᵃᵗ'ˢ ᵗʰᵉ ˢᵃᵐᵉ ᶜᵒˡᵒʳ ᵃˢ ᵗʰᵉ ᵗᵉʳʳᶦᵇˡᵉ ᶠᵒᵃᵐ ʳᵘᵇᵇᵉʳ ᵇᵃʳᵉˡʸ ʳᵉᵐᵃᶦⁿᶦⁿᵍ ʷʳᵃᵖᵖᵉᵈ ᵃʳᵒᵘⁿᵈ ᶦᵗˢ ᵃⁿᶦᵐᵃᵗʳᵒⁿᶦᶜ ˢᵏᵉˡᵉᵗᵒⁿ.  
+
+Much like Dom DeLuise's character in this movie, these are over the top, a little salty, and a concerning shade of ecru.  You're welcome?
 
 Next Time: _Doctor Mordrid_.
 
