--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -65,7 +65,7 @@ Next Time: _Doctor Mordrid_.
 
 ----
 
-## Gotta Be Munchies
+## Gotta Be Munchies!
 _adapted from the Pretzels & Stout Cookie Bars from Jesse Szewczyk's [Cookies: The New Classics](https://bookshop.org/books/cookies-the-new-classics-a-baking-book/9780593235669)_
 
 ### Ingredients
