--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -27,7 +27,7 @@ So for that, I'm sorry. I tried to make something nice, but apparently this movi
 
 We're going to start by making two sticks worth of browned butter.  In a saucepan over medium heat, melt two sticks of butter and keep them over the heat, swirling occasionally.  Your butter's going to get _super_ foamy, then that foam will turn to larger bubbles, then dissipate as the water evaporates from the butter and starts to become brown, about 4ish minutes. 
 
-<p><img src="/assets/images/gotta_be_munchies/4.jpeg" width="400"></p> 
+<p align="center"><img src="/assets/images/gotta_be_munchies/4.jpeg" width="400"></p> 
 
 When it smells nutty and you're seeing a consistent light brown color, take the pan off the heat and pour the butter into a large mixing bowl, using a spatula to get all that golden-brown goodness.  Set that aside for 20 minutes to cool off.
 
