--- a/_posts/2022-06-10-Munchie.md
+++ b/_posts/2022-06-10-Munchie.md
@@ -23,7 +23,9 @@ His ₕᵢdₑₒᵤₛ ₜaᵤₚₑ ₑₓₜₑᵣᵢₒᵣ.
 
 So for that, I'm sorry. I tried to make something nice, but apparently this movie's really sunken in deep.  
 
-Enough spiraling over the terrible puppet in this movie, let's talk about how to make these delicious bars ~~ᵗʰᵉ ᵉˣᵃᶜᵗ ˢʰᵃᵈᵉ ᵒᶠ ᵗʰᶦˢ ᶜᵘʳˢᵉ́ᵈ ʳᵒᶜᵏᵃᶠᶦʳᵉ ᵉˣᵖˡᵒˢᶦᵒⁿ ʳᵉʲᵉᶜᵗ~~ focus, Ben.  F O C U S.
+Enough spiraling over the terrible puppet in this movie, let's talk about how to make these delicious bars ᵗʰᵉ ᵉˣᵃᶜᵗ ˢʰᵃᵈᵉ ᵒᶠ ᵗʰᶦˢ ᶜᵘʳˢᵉ́ᵈ ʳᵒᶜᵏᵃᶠᶦʳᵉ ᵉˣᵖˡᵒˢᶦᵒⁿ ʳᵉʲᵉᶜᵗ 
+
+Focus, Ben.  F O C U S.
 
 <p align="center"><img src="/assets/images/gotta_be_munchies/1.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/2.jpeg" width="400"><img src="/assets/images/gotta_be_munchies/3.jpeg" width="400"></p>
 
