add batwoman and sumuru

--- a/_posts/2022-09-30-Sumuru.md
+++ b/_posts/2022-09-30-Sumuru.md
@@ -7,18 +7,60 @@ TL;DR -- NBD, but these PBJ bars come together PDQ (for when you need something 
 
 <p align="center"><img src="/assets/images/sumuru/header.png" width="800"></p>
 
-Okay, enough acronyms, but the first sketch of Su-Muru with an increasingly exasperated Jonah got me thinking about acronyms until the idea of a PB&J bar popped out.  Then, once these came together, I realized these had the same structure as a Hjónabandssæla (more on that later) and it just felt right for a movie about international espionage with a side of Frankie Avalon.
+Okay, enough acronyms, but the first sketch of Su-Muru with the bots confusing an increasingly exasperated Jonah got me thinking about acronyms until the idea of a PB&J bar popped out.  Then, once these came together, I realized these had the same structure as a Hjónabandssæla (more on that later) and it just felt right for a movie about international espionage with a side of Frankie Avalon.
 
-Walk step-by-step here
+<p align="center"><img src="/assets/images/sumuru/pbj-bars.jpeg" width="400"></p>
+
+<p align="center"><img src="/assets/images/sumuru/1.jpeg" width="400"><img src="/assets/images/sumuru/2.jpeg" width="400"><img src="/assets/images/sumuru/3.jpeg" width="400"></p>
+
+<p align="center"><img src="/assets/images/sumuru/4.jpeg" width="400"></p>
+
+<p align="center"><img src="/assets/images/sumuru/5.jpeg" width="400"><img src="/assets/images/sumuru/6.jpeg" width="400"><img src="/assets/images/sumuru/7.jpeg" width="400"></p>
+
+<p align="center"><img src="/assets/images/sumuru/8.jpeg" width="400"><img src="/assets/images/sumuru/9.jpeg" width="400"></p>
+
+<p align="center"><img src="/assets/images/sumuru/10.jpeg" width="400"></p>
+
+<p align="center"><img src="/assets/images/sumuru/11.jpeg" width="400"><img src="/assets/images/sumuru/12.jpeg" width="400"></p>
+
+<p align="center"><img src="/assets/images/sumuru/13.jpeg" width="400"><img src="/assets/images/sumuru/14.jpeg" width="400"></p>
+
+<p align="center"><img src="/assets/images/sumuru/pbj-bars.jpeg" width="400"></p>
 
 ----
 
-## Recipe Title
-_any notes_
+## PB&J Streusel Bars
+_adapted from [Cookies: The New Classics](https://bookshop.org/p/books/cookies-the-new-classics-a-baking-book-jesse-szewczyk/16709573?ean=9780593235669) by Jesse Szewczyk_
+
+Makes 12 bars.
 
 ### Ingredients
-- 
+#### Cookie Base
+- nonstick spray
+- 1 stick unsalted butter, room temperature
+- ⅓ cup (67 grams) packed light brown sugar
+- ⅓ cup (88 grams) creamy peanut butter (_Jif or Skippy, et. al, not the natural stuff_)
+- 1 large egg
+- 2 tsp vanilla extract
+- 1⅓ cups (171 grams) all-purpose flour
+- ¼ tsp kosher salt
+- ⅔ cup (60 grams) old-fashioned rolled oats
+- 1 cup (290 grams) grape jam or jelly
+
+#### Streusel
+- ½ cup (64 grams) all-purpose flour
+- ¼ cup (50 grams) packed light brown sugar
+- ½ cup (45 grams) old-fashioned rolled oats
+- ⅓ cup (43 grams) roasted salted peanuts, coarsely chopped
+- ½ stick cold unsalted butter, cut into small cubes
 
 
 ### Instructions
-1. 
+1. Preheat the oven to 350 F.  Grease an 8x8 square baking pan with nonstick spray.  Line with parchment paper, leaving a slight overhang.  Lightly spray the paper with nonstick spray
+2. In the bowl of a stand mixer fitted with the paddle attachment, combine the butter and brown sugar.  Beat on medium speed until light and fluffy, 2-3 minutes. (alternately, use a hand mixer and a large bowl)
+3. Turn the mixer off and add the peanut butter, egg, and vanilla extract.  Mix on medium until smooth and fluffy, 1-2 minutes.  Add the flour and salt and mix on low speed just until a soft dough forms.  Remove the bowl from the mixer and stir in the oats with a rubber spatula.
+4. Transfer the dough to the prepared baking pan and press into an even layer from edge to edge using clean hands or a flat-bottomed measuring cup.  Bake until the edges are lightly browned and the base is just barely set, 13-15 minutes.  Remove from the oven and let cool for 20 minutes.
+5. While the base cooles, prep the streusel: in a medium bowl, combine the flour, brown sugar, oats, and peanuts.  Add the butter cubes and press into the dry ingredients with your fingertimes until you have small pea-sized pebbles of streusel.  Keep working the butter into the mixture until no pockets of dry flour remain. Set aside.
+6. Transfer the jam into a bowl and stir to break up any chunks.  Spread over the cookie base with an offset spatual, then scatter the streusel over the top and gently press into the jam with your hands.
+7. Bake until the strusel is a deep golden brown and the jam is slightly bubbling up the sides, 20-25 minutes.  Let cool for 3 hours.
+8. Remove from the pan with your parchment overhang, then slice the bars into two large halves.  Slice each half into 6 long planks to make 12 bars.
