add batwoman and sumuru

--- a/_posts/2022-09-30-Sumuru.md
+++ b/_posts/2022-09-30-Sumuru.md
@@ -7,25 +7,51 @@ TL;DR -- NBD, but these PBJ bars come together PDQ (for when you need something 
 
 <p align="center"><img src="/assets/images/sumuru/header.png" width="800"></p>
 
-Okay, enough acronyms, but the first sketch of Su-Muru with the bots confusing an increasingly exasperated Jonah got me thinking about acronyms until the idea of a PB&J bar popped out.  Then, once these came together, I realized these had the same structure as a Hjónabandssæla (more on that later) and it just felt right for a movie about international espionage with a side of Frankie Avalon.
+Okay, enough acronyms, but the first sketch of Su-Muru with the bots confusing an increasingly exasperated Jonah got me thinking about acronyms until the idea of a PB&J bar popped out.  Then, once these came together, I realized these had the same structure as a Hjónabandssæla (more on that in a sec) and it just felt right for a movie about international espionage with a side of Frankie Avalon.
 
 <p align="center"><img src="/assets/images/sumuru/pbj-bars.jpeg" width="400"></p>
+
+Midway through making these, I realized that the method here is super similar to a hjónabandssæla, a jammy fruit bar that originates from Iceland (if that æ wasn't a giveaway).  That's got a cookie-ish base (we've got an oatmeal cookie base with some peanut butter in the mix here), a jammy filling (typically rhubarb in the original, standard Smucker's Concord Grape here), and a streusel-y top made from the same makeup as the base (check and check, plus some peanuts for crunch).
 
 <p align="center"><img src="/assets/images/sumuru/1.jpeg" width="400"><img src="/assets/images/sumuru/2.jpeg" width="400"><img src="/assets/images/sumuru/3.jpeg" width="400"></p>
 
+Everything here is pretty straightforward - the peanuts need to be chopped for the streusel, but everything else should be ready to go.
+
 <p align="center"><img src="/assets/images/sumuru/4.jpeg" width="400"></p>
+
+Start out by spraying a square baking pan with cooking spray, then lining it with parchement and letting that overhang a bit so that there's a handle for removing these later once they've cooled.
 
 <p align="center"><img src="/assets/images/sumuru/5.jpeg" width="400"><img src="/assets/images/sumuru/6.jpeg" width="400"><img src="/assets/images/sumuru/7.jpeg" width="400"></p>
 
+In the bowl of a stand mixer fitted with the paddle attachment, combine the butter and brown sugar.  Beat on medium speed until light and fluffy, 2-3 minutes. (alternately, use a hand mixer and a large bowl)
+
+Turn the mixer off and add the peanut butter, egg, and vanilla extract.  Mix on medium until smooth and fluffy, 1-2 minutes.  Add the flour and salt and mix on low speed just until a soft dough forms.  Remove the bowl from the mixer and stir in the oats with a rubber spatula.
+
 <p align="center"><img src="/assets/images/sumuru/8.jpeg" width="400"><img src="/assets/images/sumuru/9.jpeg" width="400"></p>
+
+Transfer the dough to the prepared baking pan and press into an even layer from edge to edge using clean hands or a flat-bottomed measuring cup.  Bake until the edges are lightly browned and the base is just barely set, 13-15 minutes.  Remove from the oven and let cool for 20 minutes.
 
 <p align="center"><img src="/assets/images/sumuru/10.jpeg" width="400"></p>
 
+While the base cooles, prep the streusel: in a medium bowl, combine the flour, brown sugar, oats, and peanuts.  Add the butter cubes and press into the dry ingredients with your fingertimes until you have small pea-sized pebbles of streusel. You can do this with a fork, but there's something that just feels _right_ to me about doing this by hand.
+
+Keep working the butter into the mixture until no pockets of dry flour remain. Set aside.
+
 <p align="center"><img src="/assets/images/sumuru/11.jpeg" width="400"><img src="/assets/images/sumuru/12.jpeg" width="400"></p>
+
+Transfer the jam into a bowl and stir to break up any chunks.  Spread over the cookie base with an offset spatual, then scatter the streusel over the top and gently press into the jam with your hands.
 
 <p align="center"><img src="/assets/images/sumuru/13.jpeg" width="400"><img src="/assets/images/sumuru/14.jpeg" width="400"></p>
 
+Bake until the strusel is a deep golden brown and the jam is slightly bubbling up the sides, 20-25 minutes.  Let cool for 3 hours.
+
+No, seriously, 3 hours.  These are going to be an absolute mess if you're not patient.
+
+Remove from the pan with your parchment overhang, then slice the bars into two large halves.  Slice each half into 6 long planks to make 12 bars.
+
 <p align="center"><img src="/assets/images/sumuru/pbj-bars.jpeg" width="400"></p>
+
+Next Time: **H.G. Wells' The Shape of Things To Come**
 
 ----
 
