add batwoman and sumuru

--- a/_posts/2022-09-30-Sumuru.md
+++ b/_posts/2022-09-30-Sumuru.md
@@ -87,6 +87,6 @@ Makes 12 bars.
 3. Turn the mixer off and add the peanut butter, egg, and vanilla extract.  Mix on medium until smooth and fluffy, 1-2 minutes.  Add the flour and salt and mix on low speed just until a soft dough forms.  Remove the bowl from the mixer and stir in the oats with a rubber spatula.
 4. Transfer the dough to the prepared baking pan and press into an even layer from edge to edge using clean hands or a flat-bottomed measuring cup.  Bake until the edges are lightly browned and the base is just barely set, 13-15 minutes.  Remove from the oven and let cool for 20 minutes.
 5. While the base cooles, prep the streusel: in a medium bowl, combine the flour, brown sugar, oats, and peanuts.  Add the butter cubes and press into the dry ingredients with your fingertimes until you have small pea-sized pebbles of streusel.  Keep working the butter into the mixture until no pockets of dry flour remain. Set aside.
-6. Transfer the jam into a bowl and stir to break up any chunks.  Spread over the cookie base with an offset spatual, then scatter the streusel over the top and gently press into the jam with your hands.
+6. Transfer the jam into a bowl and stir to break up any chunks.  Spread over the cookie base with an offset spatula, then scatter the streusel over the top and gently press into the jam with your hands.
 7. Bake until the strusel is a deep golden brown and the jam is slightly bubbling up the sides, 20-25 minutes.  Let cool for 3 hours.
 8. Remove from the pan with your parchment overhang, then slice the bars into two large halves.  Slice each half into 6 long planks to make 12 bars.
