--- a/_posts/2022-10-16-Den-Haag.md
+++ b/_posts/2022-10-16-Den-Haag.md
@@ -1,8 +1,13 @@
 ---
 layout: post
-title: "Madurodam"
+title: "Den Haag"
 ---
 
+## Madurodam
 As part of a work trip to the Netherlands, I spent part of Sunday at Madurodam in Den Haag, a war memorial that is also a massive model village of various landmarks throughout the country.
 
 {% include image-gallery.html folder="/assets/gallery/madurodam" %}
+
+## Other Photos from Den Haag
+
+{% include image-gallery.html folder="/assets/gallery/den-haag" %}
