--- a/_posts/2022-10-14-Rotterdam-2022.md
+++ b/_posts/2022-10-14-Rotterdam-2022.md
@@ -3,6 +3,8 @@ layout: post
 title: "Rotterdam 2022"
 ---
 
-text about ROT
+I walked around Rotterdam after work on Friday with one of my colleagues, with a focus on finding street art followed by trying a bunch of stalls at the Markthall.
+
+Other shots are from the roof of our office and Blaak square.
 
 {% include image-gallery.html folder="/assets/gallery/rotterdam-2022" %}
