--- a/_posts/2022-10-16-Den-Haag.md
+++ b/_posts/2022-10-16-Den-Haag.md
@@ -4,7 +4,7 @@ title: "Den Haag"
 ---
 
 ## Madurodam
-As part of a work trip to the Netherlands, I spent part of Sunday at Madurodam in Den Haag, a war memorial that is also a massive model village of various landmarks throughout the country.
+As part of a work trip to the Netherlands, I spent part of Sunday at Madurodam in Den Haag, a war memorial that is also a massive model village of various landmarks throughout the country.  The co-worker that recommended I check this out really gets me, and I appreciate them for that.
 
 {% include image-gallery.html folder="/assets/gallery/den-haag-day-trip/madurodam" %}
 
