add new recipes

--- a/_posts/2022-09-30-Sumuru.md
+++ b/_posts/2022-09-30-Sumuru.md
@@ -56,7 +56,7 @@ Next Time: **H.G. Wells' The Shape of Things To Come**
 ----
 
 ## PB&J Streusel Bars
-_adapted from [Cookies: The New Classics](https://bookshop.org/p/books/cookies-the-new-classics-a-baking-book-jesse-szewczyk/16709573?ean=9780593235669) by Jesse Szewczyk_
+_riffing on [Cookies: The New Classics](https://bookshop.org/p/books/cookies-the-new-classics-a-baking-book-jesse-szewczyk/16709573?ean=9780593235669) by Jesse Szewczyk_
 
 Makes 12 bars.
 
